--- a/ProjetoES22/pom.xml
+++ b/ProjetoES22/pom.xml
@@ -10,11 +10,24 @@
   <name>ProjetoES22</name>
   <url>http://maven.apache.org</url>
 
+<build>
+   <sourceDirectory>src</sourceDirectory>
+    <plugins>
+      <plugin>
+        <artifactId>maven-compiler-plugin</artifactId>
+        <version>3.8.0</version>
+        <configuration>
+          <source>1.8</source>
+          <target>1.8</target>
+        </configuration>
+      </plugin>
+    </plugins>
+  </build>
 
  <dependencies>
 <dependency>
     <groupId>org.apache.poi</groupId>
-    <artifactId>poi-ooxml</artifactId>
+    <artifactId>poi-ooxml</artifactId> 
     <version>3.11</version>
 </dependency>
 <dependency>
